# payroll-system

./: app.py  auth.py  backup_system.py  database.py  payroll.sql  payroll_system.db  pyproject.toml  qr_utils.py  replit.md  security_config.py  validation.py
routes/: admin.py  applications.py  chat.py  employee.py  exports.py  hr.py  kiosk.py  security.py  settings.py
static/css/: government-style.css
static/uploads/resumes/: APP0001_DEE_JAY_CRISTOBAL_Resume.docx
templates/: base.html  homepage.html  login.html
templates/admin/: add_employee.html  dashboard.html  edit_employee.html  list_employees.html  payroll.html  security_dashboard.html
templates/chat/: create_room.html  dashboard.html  join_room.html  room.html
templates/employee/: dashboard.html  request_leave.html  stats.html
templates/hr/: add_employee.html  applications.html  attendance_report.html  dashboard.html  edit_employee.html  leaves.html  list_employees.html  payroll_report.html  view_application.html
templates/kiosk/: punch.html
templates/public/: application_success.html  apply.html  check_status.html  status_result.html
templates/settings/: settings.html
